Add ArgumentCaptor usage to BatchJobServiceTest for clearer verifications